# qrt-2024

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: .gitignore
predict_foot_result/: __main__.py
predict_foot_result/configs/: constants.py  names.py
predict_foot_result/libs/: feature_selection.py  postprocessing.py  preprocessing.py
predict_foot_result/model/: classification_model.py  dummy_model.py  lgbm_model.py  smart_model.py
predict_foot_result/saved_models/: model_lgbm_1.pkl  model_lgbm_avg_1.pkl  model_lgbm_avg_nona_F_F_F.pkl  model_lgbm_avg_nona_F_F_T.pkl  model_lgbm_avg_nona_F_T_F.pkl  model_lgbm_avg_nona_T_F_F.pkl  model_lgbm_avg_nona_T_F_T.pkl  model_lgbm_avg_nona_T_T_F.pkl  test_lgbm_fs_1.pkl
