[tool.poetry]
name = "qrt-2024"
version = "1.0.0"
description = "Here is my code for the QRT Data Challenge 2024."
authors = ["Jules Chapon <jules.b.chapon@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
boruta = "^0.4.3"
imblearn = "^0.0"
lightgbm = "^4.5.0"
logger = "^1.4"
numpy = "^2.1.0"
optuna = "^4.0.0"
pandas = "^2.2.2"
pre-commit = "^3.8.0"
python = "^3.10"
ruff = "^0.6.3"
scikit-learn = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
